--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <title>Faerun Today</title>
 
-    <link rel="stylesheet" href="/CSS/FT_CSS.css">
+    <link rel="stylesheet" href="/FT_CSS.css">
+
 </head>
 
 <body>
@@ -17,8 +18,8 @@
     </header>
 
     <div class="Timg">
-            <img src="/IMG/Tentacles.png" alt="Tentacles_Left" class="TLeft">
-            <img src="/IMG/Tentacles.png" alt="Tentacles_Right" class="TRight">           
+            <img src="/Tentacles.png" alt="Tentacles_Left" class="TLeft">
+            <img src="/Tentacles.png" alt="Tentacles_Right" class="TRight">           
     </div>
 
     
@@ -40,7 +41,7 @@
         <div class="NewsLeft">
             <div>
 
-                <img src="/GIFS/LECHERO_CRIT.gif" alt="Test01" class="INews">
+                <img src="/LECHERO_CRIT.gif" alt="LECHERO_CRIT" class="INews">
 
             <p>
 
@@ -69,7 +70,7 @@
         <div class="NewsRight">
             <div>
 
-                <img src="/IMG/Trankimazin_NewPet.png" alt="Test01" class="INews">
+                <img src="/Trankimazin_NewPet.png" alt="Trankimazin_NewPet" class="INews">
                 
                 <p>
 
