--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <title>Faerun Today</title>
 
-    <link rel="stylesheet" href="/FT_CSS.css">
+    <link rel="stylesheet" href="FT_CSS.css">
 
 </head>
 
@@ -18,8 +18,8 @@
     </header>
 
     <div class="Timg">
-            <img src="/Tentacles.png" alt="Tentacles_Left" class="TLeft">
-            <img src="/Tentacles.png" alt="Tentacles_Right" class="TRight">           
+            <img src="Tentacles.png" alt="Tentacles_Left" class="TLeft">
+            <img src="Tentacles.png" alt="Tentacles_Right" class="TRight">           
     </div>
 
     
@@ -41,7 +41,7 @@
         <div class="NewsLeft">
             <div>
 
-                <img src="/LECHERO_CRIT.gif" alt="LECHERO_CRIT" class="INews">
+                <img src="LECHERO_CRIT.gif" alt="LECHERO_CRIT" class="INews">
 
             <p>
 
@@ -70,7 +70,7 @@
         <div class="NewsRight">
             <div>
 
-                <img src="/Trankimazin_NewPet.png" alt="Trankimazin_NewPet" class="INews">
+                <img src="Trankimazin_NewPet.png" alt="Trankimazin_NewPet" class="INews">
                 
                 <p>
 
