--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Faerun Today</title>
+    <title>Faerun Todays</title>
 
     <link rel="stylesheet" href="FT_CSS.css">
 
