--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Faerun Todays</title>
 
     <link rel="stylesheet" href="FT_CSS.css">
+    <link rel="shortcut icon" href="D20.ico">
 
 </head>
 
