--- a/Acto2_5.html
+++ b/Acto2_5.html
@@ -5,9 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Faerun Today</title>
+    <title>Acto 2.5</title>
 
     <link rel="stylesheet" href="FT_CSS.css">
+    <link rel="shortcut icon" href="D20.ico">
 
 </head>
 
