--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Faerun Todays</title>
+    <title>Faerun Today</title>
 
     <link rel="stylesheet" href="FT_CSS.css">
     <link rel="shortcut icon" href="D20.ico">
@@ -42,8 +42,8 @@
         <div class="Actos">
 
         <a href="Acto2_5.html"><div class="Acto"><div class="Actostext">Acto 2 . 5 </div></div></a>
-        <a href="Acto2_5.html"><div class="Acto"><div class="Actostext">Acto 2 . 6 </div></div></a>
-        <a href="Acto2_5.html"><div class="Acto"><div class="Actostext">Acto 3 . 0 </div></div></a>
+        <a href="Acto2_6.html"><div class="Acto"><div class="Actostext">Acto 2 . 6 </div></div></a>
+        <a href="Acto3.html"><div class="Acto"><div class="Actostext">Acto 3 . 0 </div></div></a>
 
         </div>
 
