--- a/Acto2_5.html
+++ b/Acto2_5.html
@@ -14,9 +14,9 @@
 
 <body>
 
-    <header>
+    <a href="index.html"><header>
         <h1>FAERUN TODAY</h1>
-    </header>
+    </header></a>
 
     <div class="Timg">
             <img src="Tentacles.png" alt="Tentacles_Left" class="TLeft">
