Css y video update

--- a/Acto3.html
+++ b/Acto3.html
@@ -18,8 +18,8 @@
         <h1>FAERUN TODAY</h1>
     </header></a>
 
-    <video autoplay="autoplay" loop="loop" id="video_background" preload="auto" volume="0">
-        <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4" />
+    <video muted autoplay loop class="video_background">
+        <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4">
     </video>
 
 <!--
