--- a/Acto2_6.html
+++ b/Acto2_6.html
@@ -18,13 +18,19 @@
         <h1>FAERUN TODAY</h1>
     </header></a>
 
+    <video muted autoplay loop class="video_background">
+        <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4">
+    </video>
+
+<!--
+
     <div class="Timg">
             <img src="Tentacles.png" alt="Tentacles_Left" class="TLeft">
             <img src="Tentacles.png" alt="Tentacles_Right" class="TRight">           
     </div>
 
+-->
     
-
     <br>
 
     <section>
