--- a/index.html
+++ b/index.html
@@ -18,12 +18,18 @@
         <h1>FAERUN TODAY</h1>
     </header>
 
+    <video muted autoplay loop class="video_background">
+        <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4">
+    </video>
+
+<!--
+
     <div class="Timg">
             <img src="Tentacles.png" alt="Tentacles_Left" class="TLeft">
             <img src="Tentacles.png" alt="Tentacles_Right" class="TRight">           
     </div>
 
-    
+-->
 
     <br>
 
