big update New news

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
         <a href="Acto2_5.html"><div class="Acto"><div class="Actostext">Acto 2 . 5 </div></div></a>
         <a href="Acto2_6.html"><div class="Acto"><div class="Actostext">Acto 2 . 6 </div></div></a>
         <a href="Acto3.html"><div class="Acto"><div class="Actostext">Acto 3 . 0 </div></div></a>
+        <a href="Acto3_1.html"><div class="Acto"><div class="Actostext">Acto 3 . 1 </div></div></a>
 
         </div>
 
