--- a/News_Test.html
+++ b/News_Test.html
@@ -27,14 +27,15 @@
  
     <br>
 
-    <section>
+    <section class="News">
 
         <div class="News_list">
             <div class="News_container">
                 <div class="News_border">
-                    <div class="News_corner_tl">
-
-                    </div>
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
                 </div>
                 <div>
                     <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
