--- a/News_Test.html
+++ b/News_Test.html
@@ -48,7 +48,10 @@
             </div>
             <div class="News_container">
                 <div class="News_border">
-
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
                     <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
@@ -61,7 +64,10 @@
             </div>
             <div class="News_container">
                 <div class="News_border">
-
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
                     <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
@@ -74,7 +80,10 @@
             </div>
             <div class="News_container">
                 <div class="News_border">
-
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
                     <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
@@ -87,7 +96,10 @@
             </div>
             <div class="News_container">
                 <div class="News_border">
-
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
                     <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
