--- a/News_Test.html
+++ b/News_Test.html
@@ -38,11 +38,9 @@
                     <div class="News_corner_br"></div>
                 </div>
                 <div>
-                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
-
-                    </div>
+                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/IMG/A3_1/1.PNG?raw=true);"></div>
                     <div class="News_text">
-
+                        <h3>Hola a todos</h3>
                     </div>
                 </div>
             </div>
