--- a/News_Test.html
+++ b/News_Test.html
@@ -15,8 +15,17 @@
 <body>
 
     <a href="index.html"><header>
+        <div class="News_corner_tl"></div>
+            <div class="News_corner_tl"></div>
+            <div class="News_corner_tr"></div>
+            <div class="News_corner_bl"></div>
+            <div class="News_corner_br"></div>
         <h1>FAERUN TODAY</h1>
     </header></a>
+
+    <video muted autoplay loop class="video_background">
+        <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4">
+    </video>
 
 <!--
     <div class="Timg">
@@ -40,7 +49,8 @@
                 <div>
                     <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/1.png);"></div>
                     <div class="News_text">
-                        <h3>Muñescos explisivos</h3>
+                        <h3>Juguetes explisivos</h3>
+                        <p>Nuestros trio desactiva una bombas que alguien habia puesto en jugetes donados, aunque los guardias echan la culpa a nuestros heroes lo que desencadeno en la aniquilacion de todos los guardias de la zona.</p>
                     </div>
                 </div>
             </div>
