--- a/News_Test.html
+++ b/News_Test.html
@@ -14,18 +14,31 @@
 
 <body>
 
-    <a href="index.html"><header>
-        <div class="News_corner_tl"></div>
+    <video muted autoplay loop class="video_background">
+        <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4">
+    </video>
+
+
+    <a href="index.html">
+        <header>
+            <div class="Header_deco"></div>
             <div class="News_corner_tl"></div>
             <div class="News_corner_tr"></div>
             <div class="News_corner_bl"></div>
             <div class="News_corner_br"></div>
-        <h1>FAERUN TODAY</h1>
-    </header></a>
+            <h1>FAERUN TODAY</h1>
+        </header>
+    </a>
 
-    <video muted autoplay loop class="video_background">
-        <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4">
-    </video>
+    <br>
+
+    <section class="Act_container">
+        <div class="Act_items">
+            <h3>Act 3.1</h3>
+        </div>
+
+    </section>
+
 
 <!--
     <div class="Timg">
@@ -49,7 +62,7 @@
                 <div>
                     <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/1.png);"></div>
                     <div class="News_text">
-                        <h3>Juguetes explisivos</h3>
+                        <h3>Juguetes explosivos</h3>
                         <p>Nuestros trio desactiva una bombas que alguien habia puesto en jugetes donados, aunque los guardias echan la culpa a nuestros heroes lo que desencadeno en la aniquilacion de todos los guardias de la zona.</p>
                     </div>
                 </div>
