--- a/Acto3_1.html
+++ b/Acto3_1.html
@@ -7,21 +7,38 @@
 
     <title>Acto 3.1</title>
 
-    <link rel="stylesheet" href="FT_CSS.css">
+    <link rel="stylesheet" href="Index.css">
     <link rel="shortcut icon" href="D20.ico">
 
 </head>
 
 <body>
 
-    <a href="index.html"><header>
-        <h1>FAERUN TODAY</h1>
-    </header></a>
-
-
     <video muted autoplay loop class="video_background">
         <source src="VIDS/FaerunTodaybg.mp4" type="video/mp4">
     </video>
+
+
+    <a href="index.html">
+        <header>
+            <div class="Header_deco"></div>
+            <div class="News_corner_tl"></div>
+            <div class="News_corner_tr"></div>
+            <div class="News_corner_bl"></div>
+            <div class="News_corner_br"></div>
+            <h1>FAERUN TODAY</h1>
+        </header>
+    </a>
+
+    <br>
+
+    <section class="Act_container">
+        <div class="Act_items">
+            <h3>Act 3.1</h3>
+        </div>
+
+    </section>
+
 
 <!--
     <div class="Timg">
@@ -32,61 +49,93 @@
  
     <br>
 
-    <section>
+    <section class="News">
 
-        <hr class="hrtop">
-
-        <h2>Acto 3 . 1</h2>
-
-        <hr class="hrbot">
-
-    </section>
-
-    <section>
-
-        <div class="news_list">
-
-            <div class="news_container">
-                <div class="item_blur">
-                    <div class="item_image" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/IMG/A3/1.png?raw=true);">
-                        
+        <div class="News_list">
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div>
+                    <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/1.png);"></div>
+                    <div class="News_text">
+                        <h3>Juguetes explosivos</h3>
+                        <p>Nuestros trio desactiva una bombas que alguien habia puesto en jugetes donados, aunque los guardias echan la culpa a nuestros heroes lo que desencadeno en la aniquilacion de todos los guardias de la zona.</p>
                     </div>
-
                 </div>
             </div>
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/IMG/A3_1/1.png?raw=true);">
 
-            <div class="news_container">
-                <div class="item">
+                    </div>
+                    <div class="News_text">
 
+                    </div>
                 </div>
             </div>
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
 
-            <div class="news_container">
-                <div class="item">
+                    </div>
+                    <div class="News_text">
 
+                    </div>
                 </div>
             </div>
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
 
+                    </div>
+                    <div class="News_text">
+
+                    </div>
+                </div>
+            </div>
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
+
+                    </div>
+                    <div class="News_text">
+
+                    </div>
+                </div>
+            </div>
         </div>
-
-
-    </section>
-
-    <section>
-
-        <div class="Proxi">
-
-            <h3> 
-            Proximamente :
-                <br>
-            El grupo se adentrara mas a las puertas de Baldurs <br>
-            explorando cada rincos y acabando con cada ser vivo
         
-            </h3>
-
-        </div>
 
     </section>
+
   
 </body>
 
