--- a/Acto3_1.html
+++ b/Acto3_1.html
@@ -75,11 +75,12 @@
                     <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
-                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/IMG/A3_1/1.png?raw=true);">
+                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3_1/1.gif?raw=true);">
 
                     </div>
                     <div class="News_text">
-
+                        <h3>Buey Misterioso</h3>
+                        <p>Tras una extraña conversacion con un buey, vimos como no era un buey normal y que ocultaba oscuras historias tras el.<br>Pero nada comparado con la deprabada mente de Aurora.</p>
                     </div>
                 </div>
             </div>
