--- a/Acto3_1.html
+++ b/Acto3_1.html
@@ -50,7 +50,6 @@
     <br>
 
     <section class="News">
-
         <div class="News_list">
             <div class="News_container">
                 <div class="News_border">
@@ -92,11 +91,12 @@
                     <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
-                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
+                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3_1/2.gif?raw=true);">
 
                     </div>
                     <div class="News_text">
-
+                        <h3>A la de 3 destrozamos</h3>
+                        <p>Tras una pequeña charla con unos cazadores que pretendian salvar a unos niños, el trio ansioso decidio que se encargarian ellos y que no haria falta que los cazadores siguieran existiendo.</p>
                     </div>
                 </div>
             </div>
@@ -108,11 +108,12 @@
                     <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
-                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
+                    <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/2.png);">
 
                     </div>
                     <div class="News_text">
-
+                        <h3>Trankimazin!!</h3>
+                        <p>Si una cosa saben nuestros lectores es que no se puede dejar a Trankimazin sola un momento, tras avanzar un poco, ella quedo un poco atras donde fue fulminada por una estatua...</p>
                     </div>
                 </div>
             </div>
@@ -124,17 +125,84 @@
                     <div class="News_corner_br"></div>
                 </div>
                 <div class="News_content">
-                    <div class="News_img" style="background-image: url(https://github.com/AveysT/FaerunToday/blob/main/GIFS/A3/2.gif?raw=true);">
+                    <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/3.png);">
 
                     </div>
                     <div class="News_text">
-
+                        <h3>"Nos quedamos todo"</h3>
+                        <p>Un poco mas adelante de la muerte de Tranki (tranquilos esta bien) se encontraron dos grupos discutiendo por quien se quedaria la mercancia de una barco, asi que nuestro grupo decidio que era mejor que se lo quedaran ellos.</p>
                     </div>
                 </div>
             </div>
-        </div>
-        
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/4.png);">
 
+                    </div>
+                    <div class="News_text">
+                        <h3>Vampiros resbaladizos</h3>
+                        <p>Una vez ya a las puertas de Baldurs, nuestro trio se topo con unos vampiros que planeaban ir a una fiesta, pero para fiesta la que les iban a dar estos 3, pero a la hora de atacar los vampiros desaparecieron sin dejar rastro.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/5.png);">
+
+                    </div>
+                    <div class="News_text">
+                        <h3>El diablo, loco</h3>
+                        <p>Maldito charlatan no para de quejarse, ahora se le ha antojado una corona y como es tremendo cabezon, quiere que el trio ansioso le quite la corona al cerebro gigante volador.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/6.png);">
+
+                    </div>
+                    <div class="News_text">
+                        <h3>Se puso rara la cosa</h3>
+                        <p>El trio estaba chequeando habitaciones a la que sin querer entraron una ocupada por una señorita de bien y su clienta, quien resulto ser un ilicido al que tuvieron que poner fin, aunque, como recompensa Aurora se llevo un final feliz je je...</p>
+                    </div>
+                </div>
+            </div>
+            <div class="News_container">
+                <div class="News_border">
+                    <div class="News_corner_tl"></div>
+                    <div class="News_corner_tr"></div>
+                    <div class="News_corner_bl"></div>
+                    <div class="News_corner_br"></div>
+                </div>
+                <div class="News_content">
+                    <div class="News_img" style="background-image: url(https://raw.githubusercontent.com/AveysT/FaerunToday/refs/heads/main/IMG/A3_1/7.png);">
+
+                    </div>
+                    <div class="News_text">
+                        <h3>Bienvenidos</h3>
+                        <p>Las armaduras y guardias de la entrada a Baldurs le dieron la bienvenida a nuestro trio que se ya se acercaba a conocer a Gortash en persona, pero no sin antes hacer una paradita por la carcel que habia en el sotano donde jubilaron a todo ser vivo en su interior.</p>
+                    </div>
+                </div>
+            </div>
+        </div>      
     </section>
 
   
